crates/ruff_python_formatter/tests/snapshots/format@fmt_on_off__indent.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/fmt_on_off/indent.py
---
## Input
```python
def test():
 # fmt: off
 a_very_small_indent
 (
not_fixed
 )

 if True:
  pass
  more
 # fmt: on

 formatted

 def test():
  a_small_indent
  # fmt: off
# fix under-indented comments
  (or_the_inner_expression +
expressions
   )

  if True:
   pass
  # fmt: on


# fmt: off
def test():
  pass

  # It is necessary to indent comments because the following fmt: on comment because it otherwise becomes a trailing comment
  # of the `test` function if the "proper" indentation is larger than 2 spaces.
  # fmt: on

disabled +  formatting;

# fmt: on

formatted;

def test():
  pass
  # fmt: off
  """A multiline strings
      that should not get formatted"""

  "A single quoted multiline \
       string"

  disabled +  formatting;

# fmt: on

formatted;
```

## Outputs
### Output 1
```
indent-style               = space
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
assignment-alignment       = disabled
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
nested-string-quote-style  = alternating
```

```python
def test():
    # fmt: off
    a_very_small_indent
    (
not_fixed
 )

    if True:
     pass
     more
    # fmt: on

    formatted

    def test():
        a_small_indent
        # fmt: off
        # fix under-indented comments
        (or_the_inner_expression +
expressions
   )

        if True:
         pass
        # fmt: on


# fmt: off
def test():
  pass

  # It is necessary to indent comments because the following fmt: on comment because it otherwise becomes a trailing comment
  # of the `test` function if the "proper" indentation is larger than 2 spaces.
  # fmt: on

disabled +  formatting;

# fmt: on

formatted


def test():
    pass
    # fmt: off
    """A multiline strings
      that should not get formatted"""

    "A single quoted multiline \
       string"

    disabled +  formatting;


# fmt: on

formatted
```


### Output 2
```
indent-style               = space
line-width                 = 88
indent-width               = 1
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
assignment-alignment       = disabled
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
nested-string-quote-style  = alternating
```

```python
def test():
 # fmt: off
 a_very_small_indent
 (
not_fixed
 )

 if True:
  pass
  more
 # fmt: on

 formatted

 def test():
  a_small_indent
  # fmt: off
  # fix under-indented comments
  (or_the_inner_expression +
expressions
   )

  if True:
   pass
  # fmt: on


# fmt: off
def test():
  pass

  # It is necessary to indent comments because the following fmt: on comment because it otherwise becomes a trailing comment
  # of the `test` function if the "proper" indentation is larger than 2 spaces.
  # fmt: on

disabled +  formatting;

# fmt: on

formatted


def test():
 pass
 # fmt: off
 """A multiline strings
      that should not get formatted"""

 "A single quoted multiline \
       string"

 disabled +  formatting;


# fmt: on

formatted
```


### Output 3
```
indent-style               = tab
line-width                 = 88
indent-width               = 4
quote-style                = Double
line-ending                = LineFeed
magic-trailing-comma       = Respect
assignment-alignment       = disabled
docstring-code             = Disabled
docstring-code-line-width  = "dynamic"
preview                    = Disabled
target_version             = 3.10
source_type                = Python
nested-string-quote-style  = alternating
```

```python
def test():
	# fmt: off
	a_very_small_indent
	(
not_fixed
 )

	if True:
	 pass
	 more
	# fmt: on

	formatted

	def test():
		a_small_indent
		# fmt: off
		# fix under-indented comments
		(or_the_inner_expression +
expressions
   )

		if True:
		 pass
		# fmt: on


# fmt: off
def test():
  pass

  # It is necessary to indent comments because the following fmt: on comment because it otherwise becomes a trailing comment
  # of the `test` function if the "proper" indentation is larger than 2 spaces.
  # fmt: on

disabled +  formatting;

# fmt: on

formatted


def test():
	pass
	# fmt: off
	"""A multiline strings
      that should not get formatted"""

	"A single quoted multiline \
       string"

	disabled +  formatting;


# fmt: on

formatted
```
